Small refactorings + improve test coverage